update style and server render

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "netlify": "netlify-lambda build express",
     "report": "npm_config_report=true npm run build"
   },
   "dependencies": {
