--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "express-http-proxy": "^1.6.0",
     "fastclick": "^1.0.6",
     "js-cookie": "^2.2.1",
     "less-loader": "^5.0.0",
