--- a/package.json
+++ b/package.json
@@ -10,38 +10,40 @@
   },
   "dependencies": {
     "@types/twix": "^0.6.38",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
-    "core-js": "^2.6.5",
+    "body-parser": "^1.19.0",
+    "core-js": "^2.6.11",
+    "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "fastclick": "^1.0.6",
     "js-cookie": "^2.2.1",
-    "less-loader": "^5.0.0",
     "moment": "^2.24.0",
-    "pubsub-js": "^1.7.0",
+    "pubsub-js": "^1.8.0",
     "reset-css": "^4.0.1",
+    "serverless-http": "^2.3.2",
     "twix": "^1.3.0",
-    "vant": "^2.2.0",
-    "vue": "^2.6.10",
+    "vant": "^2.6.2",
+    "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-content-loader": "^0.2.3",
-    "vue-i18n": "^8.15.3",
+    "vue-i18n": "^8.17.2",
     "vue-lazyload": "^1.3.3",
-    "vue-router": "^3.0.3",
-    "vue-waterfall2": "^1.9.1",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.1.6",
+    "vue-waterfall2": "^1.9.6",
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "babel-plugin-import": "^1.12.1",
-    "netlify-lambda": "^1.6.3",
-    "less": "^3.0.4",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
+    "babel-plugin-import": "^1.13.0",
+    "less": "^3.11.1",
     "less-loader": "^4.1.0",
-    "svg-sprite-loader": "^4.1.6",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.6.1",
+    "netlify-lambda": "^1.6.3",
+    "svg-sprite-loader": "^4.2.5",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11"
   }
 }
